# hippodeep_pytorch

./: GetFilename.py  HippoDeep.spec  README.md  deepseg1.sh  hippodeep.py  model_apply_head_and_hippo.py  pyproject.toml  screenshot_circle.py
torchparams/: hippodeep.pt  params_head_00075_00000.pt  paramsaffineta_00079_00000.pt
